src/main/java/com/example/demo/global/error/exception/CustomApplicationException.java
package com.example.demo.global.error.exception;

// controller - service(예외 발생) - presentation
public class CustomApplicationException extends BaseException{
}
